find_package(Threads)
#find_package(PostgreSQL)
SET(src_list client_thread.cpp db_exception.cpp log_dao.cpp main.cpp read_exception.cpp server.cpp server_socket.cpp store_thread.cpp base_thread.cpp data.cpp file_dao.cpp log_queue.cpp save_exception.cpp server_exception.cpp socket_exception.cpp thread_exception.cpp)
SET(PostgreSQL_INCLUDE_DIR /usr/include/pgsql/server)
SET(PostgreSQL_LIBRARY_DIR /usr/pgsql-9.5/lib)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR} ${PostgreSQL_INCLUDE_DIR})
ADD_EXECUTABLE(dms_server ${src_list})
#ADD_EXECUTABLE(pg_test test_sql.cpp)
TARGET_LINK_LIBRARIES(dms_server ${CMAKE_THREAD_LIBS_INIT})
#TARGET_LINK_LIBRARIES(pg_test ${PostgreSQL_LIBRARY_DIR}/libpq.so.5)
